// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Empty Report generates an empty report when no team object given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Engineers generates a report when no Engineers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:bazz@lovesshazz.com\\">bazz@lovesshazz.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\"><strong>Office:</strong> 48</p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Peter</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 58
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:petey_treaty@treats.co.uk\\"
                    >petey_treaty@treats.co.uk</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> John 23rd
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Engineers generates a report with engineers when engineers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:bazz@lovesshazz.com\\">bazz@lovesshazz.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\"><strong>Office:</strong> 48</p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:john@bigj.com\\">john@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/BiGJ98\\">BiGJ98</a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Peter</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 58
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:petey_treaty@treats.co.uk\\"
                    >petey_treaty@treats.co.uk</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> John 23rd
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Inters generates a report when no Inters are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:bazz@lovesshazz.com\\">bazz@lovesshazz.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\"><strong>Office:</strong> 48</p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:john@bigj.com\\">john@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/BiGJ98\\">BiGJ98</a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Inters generates a report with Interns when Inters are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:bazz@lovesshazz.com\\">bazz@lovesshazz.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\"><strong>Office:</strong> 48</p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:john@bigj.com\\">john@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/BiGJ98\\">BiGJ98</a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Peter</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 58
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:petey_treaty@treats.co.uk\\"
                    >petey_treaty@treats.co.uk</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> John 23rd
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Larger Report generates an full report when a team of 10 is given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:bazz@lovesshazz.com\\">bazz@lovesshazz.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\"><strong>Office:</strong> 48</p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:john@bigj.com\\">john@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/BiGJ98\\">BiGJ98</a>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Beth</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 256
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:beth@bigj.com\\">beth@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/beth_love_coding\\"
                    >beth_love_coding</a
                  >
                </p>
              </div>
            </div>
          </div>
        </div>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Karren</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 1234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:kazza@bigj.com\\">kazza@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/KaZzA_K0d3s\\">KaZzA_K0d3s</a>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Ruth</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 6785
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:rudeth@bigj.com\\">rudeth@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/tRUTHy\\">tRUTHy</a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Emily</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 76
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:emily_56@treats.co.uk\\"
                    >emily_56@treats.co.uk</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> John 23rd
                </p>
              </div>
            </div>
          </div>
        </div>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Peter</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 34
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:petey_treaty@treats.co.uk\\"
                    >petey_treaty@treats.co.uk</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> Scotch
                </p>
              </div>
            </div>
          </div>
        </div>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Rod</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 989
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:nice_rod_rod@bannedEmail.io\\"
                    >nice_rod_rod@bannedEmail.io</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> Balga High
                </p>
              </div>
            </div>
          </div>
        </div>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Jen</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 705
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:jennyfromdablock@coolemail.co\\"
                    >jennyfromdablock@coolemail.co</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> Christchurch
                </p>
              </div>
            </div>
          </div>
        </div>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Jase</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 454
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:jase@isnotanace.pro\\">jase@isnotanace.pro</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> What is School?
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Managers generates a report when no managers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:john@bigj.com\\">john@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/BiGJ98\\">BiGJ98</a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Peter</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 58
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:petey_treaty@treats.co.uk\\"
                    >petey_treaty@treats.co.uk</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> John 23rd
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Managers generates a report with managers when managers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:bazz@lovesshazz.com\\">bazz@lovesshazz.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\"><strong>Office:</strong> 48</p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:john@bigj.com\\">john@bigj.com</a>
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub:</strong>
                  <a href=\\"https://github.com/BiGJ98\\">BiGJ98</a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Peter</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 58
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong
                  ><a href=\\"mailto:petey_treaty@treats.co.uk\\"
                    >petey_treaty@treats.co.uk</a
                  >
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>School:</strong> John 23rd
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </body>
</html>
"
`;
